chef-stacktrace.out
Generated at 2015-09-13 03:09:46 +0000
SyntaxError: /root/chef-solo/cookbooks/test/attributes/default.rb:1: syntax error, unexpected ':', expecting end-of-input
"version": 2.12
          ^
/opt/chef/embedded/apps/chef/lib/chef/mixin/from_file.rb:30:in `instance_eval'
/opt/chef/embedded/apps/chef/lib/chef/mixin/from_file.rb:30:in `from_file'
/opt/chef/embedded/apps/chef/lib/chef/dsl/include_attribute.rb:39:in `block in include_attribute'
/opt/chef/embedded/apps/chef/lib/chef/dsl/include_attribute.rb:31:in `each'
/opt/chef/embedded/apps/chef/lib/chef/dsl/include_attribute.rb:31:in `include_attribute'
/opt/chef/embedded/apps/chef/lib/chef/run_context/cookbook_compiler.rb:181:in `load_attribute_file'
/opt/chef/embedded/apps/chef/lib/chef/run_context/cookbook_compiler.rb:170:in `load_attributes_from_cookbook'
/opt/chef/embedded/apps/chef/lib/chef/run_context/cookbook_compiler.rb:110:in `block in compile_attributes'
/opt/chef/embedded/apps/chef/lib/chef/run_context/cookbook_compiler.rb:109:in `each'
/opt/chef/embedded/apps/chef/lib/chef/run_context/cookbook_compiler.rb:109:in `compile_attributes'
/opt/chef/embedded/apps/chef/lib/chef/run_context/cookbook_compiler.rb:72:in `compile'
/opt/chef/embedded/apps/chef/lib/chef/run_context.rb:97:in `load'
/opt/chef/embedded/apps/chef/lib/chef/policy_builder/expand_node_object.rb:87:in `setup_run_context'
/opt/chef/embedded/apps/chef/lib/chef/client.rb:486:in `setup_run_context'
/opt/chef/embedded/apps/chef/lib/chef/client.rb:266:in `run'
/opt/chef/embedded/apps/chef/lib/chef/application.rb:270:in `block in fork_chef_client'
/opt/chef/embedded/apps/chef/lib/chef/application.rb:258:in `fork'
/opt/chef/embedded/apps/chef/lib/chef/application.rb:258:in `fork_chef_client'
/opt/chef/embedded/apps/chef/lib/chef/application.rb:224:in `block in run_chef_client'
/opt/chef/embedded/apps/chef/lib/chef/local_mode.rb:39:in `with_server_connectivity'
/opt/chef/embedded/apps/chef/lib/chef/application.rb:212:in `run_chef_client'
/opt/chef/embedded/apps/chef/lib/chef/application/solo.rb:280:in `block in interval_run_chef_client'
/opt/chef/embedded/apps/chef/lib/chef/application/solo.rb:269:in `loop'
/opt/chef/embedded/apps/chef/lib/chef/application/solo.rb:269:in `interval_run_chef_client'
/opt/chef/embedded/apps/chef/lib/chef/application/solo.rb:247:in `run_application'
/opt/chef/embedded/apps/chef/lib/chef/application.rb:60:in `run'
/opt/chef/embedded/apps/chef/bin/chef-solo:25:in `<top (required)>'
/usr/bin/chef-solo:55:in `load'
/usr/bin/chef-solo:55:in `<main>'